--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
