--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.17.0",
